stack this back mountain to make sure it remains directly behind the left mountain

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
     border: 2px solid rgb(145, 15, 15);
     background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
     position: absolute;
+    z-index: 1;
 }
 
 
